# sparrow-extensions

./: CMakeLists.txt  README.md  environment-dev.yml
.github/workflows/: deploy-pages.yaml  linux.yml  osx.yml  release.yaml  windows.yml
cmake/: external_dependencies.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: bool8_array.md  fixed_shape_tensor_array.md  installation.md  json_array.md  main_page.md  uuid_array.md
include/: sparrow_extensions.hpp
include/sparrow_extensions/: bool8_array.hpp  fixed_shape_tensor.hpp  json_array.hpp  uuid_array.hpp  variable_shape_tensor.hpp
include/sparrow_extensions/config/: config.hpp  sparrow_extensions_version.hpp
src/: bool8_array.cpp  fixed_shape_tensor.cpp  json_array.cpp  uuid_array.cpp  variable_shape_tensor.cpp
tests/: CMakeLists.txt  test_bool8_array.cpp  test_fixed_shape_tensor.cpp  test_json_array.cpp  test_uuid_array.cpp  test_variable_shape_tensor.cpp
